--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjsplus/config": "^1.0.14",
-    "@nestjsplus/massive": "^1.2.0",
+    "@nestjsplus/massive": "file:../massive",
     "humps": "^2.0.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
